[package]
name = "bevy_cobweb"
description = "Bevy-integrated reactive webs"
authors = ["koe <ukoe@protonmail.com>"]
version = "0.0.3"
edition = "2021"
keywords = ["gamedev", "reactive"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/bevy_cobweb"

[workspace]
members = [
    "bevy_cobweb_derive",
]

[lib]
path = "src/lib.rs"
doctest = false
test = false

[[test]]
name = "tests"
path = "tests/test/mod.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy           = { version = "0.12", default-features = false }
bevy_fn_plugin = { version = "0.1" }
bevy_kot_utils = { version = "0.11" }
fxhash         = { version = "0.2" }
tracing        = { version = "0.1" }

bevy_cobweb_derive = { path = "bevy_cobweb_derive", version = "0.1.0" }

[dev-dependencies]
tracing-subscriber = { version = "0.3" }
