[package]
name = "bevy_cobweb"
description = "Reactivity primitives for Bevy"
authors = ["koe <ukoe@protonmail.com>"]
version = "0.9.0"
edition = "2021"
keywords = ["gamedev", "reactive"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/bevy_cobweb"

[workspace]
members = [
    "bevy_cobweb_derive",
]

[lib]
path = "src/lib.rs"
doctest = false
test = false

[[test]]
name = "tests"
path = "tests/test/mod.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy           = { version = "0.14", default-features = false }
crossbeam      = { version = "0.8" }
fxhash         = { version = "0.2" }
itertools      = { version = "0.13" }
smallvec       = { version = "1.13", features = ["drain_filter"] }
tracing        = { version = "0.1.27" }

bevy_cobweb_derive = { path = "bevy_cobweb_derive", version = "0.1.0" }

[dev-dependencies]
tracing-subscriber = { version = "0.3" }
